Updated homepage with description

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,6 +21,7 @@ limitations under the License.
     <meta charset="UTF-8">
     <title>CodeU 2019 Starter Project</title>
     <link rel="stylesheet" href="/css/index-page.css">
+	<link href="https://fonts.googleapis.com/css?family=Arimo&display=swap" rel="stylesheet">
     <script src="/js/navigation-loader.js"></script>
 
   </head>
@@ -31,9 +32,13 @@ limitations under the License.
     </nav>
 
 <!--  <header> -->
-	<div class="bg">
+	<div class="bg" style="font-family: 'Arimo', sans-serif;">
 		<h1 class="headings">COMPUTER SCIENCE OPPORTUNITIES</h1>
-		<div class="forms" style = "transform: translate(0%, 30%)">
+		<h2 class="headings" style = "transform: translateY(3%);">Are you a student pursuing Computer Science?
+		<br> Finding international opportunities to polish your skills and get recognition?
+		<br> Then you are at the right place</h2>
+		
+		<div class="forms" style = "transform: translate(0%, 10%)">
 		<center>
 			<p style="color:white;"><font size="5"><strong>Already a member?</strong></font></p>
 			<form action="/login">
@@ -42,29 +47,29 @@ limitations under the License.
 		</center>
 		</div>
 		<div class="content">
-			<div class="kolom">
-				<div class="atas">
+			<div class="box">
+				<div class="image">
 					<img src="/images/Messages.png"></div>
-				<div class="tengah">
+				<div class="title">
 				<h1>CONNECT</h1></div>
 				
-				<div class="bawah"><p>Build your contacts by joining a strong community of students seeking for opportunities.</p></div>
+				<div class="description"><p>Build your contacts by joining a strong community of students seeking for opportunities.</p></div>
 			</div>
-			<div class="kolom">
-				<div class="atas">
+			<div class="box">
+				<div class="image">
 				<img src="/images/awareness1.png"></div>
-				<div class="tengah">
+				<div class="title">
 				<h1>LEARN & APPLY</h1></div>
-				<div class="bawah">
+				<div class="description">
 				<p>Get information regarding a scholarship by reading the information provided and visiting links</p></div>
 			</div>
-			<div class="kolom">
-				<div class="atas">
+			<div class="box">
+				<div class="image">
 				<img src="/images/win.png"></div>
 				
-				<div class="tengah">
+				<div class="title">
 				<h1>WIN</h1></div>
-				<div class="bawah"><p>Failure is worse than not trying. Consistency and hard work is the key to success</p></div>
+				<div class="description"><p>Failure is worse than not trying. Consistency and hard work is the key to success</p></div>
 			</div>
 		</div>
 	</div>
