Adds link of opportunity panel in nav bar

--- a/src/main/webapp/opportunities.html
+++ b/src/main/webapp/opportunities.html
@@ -16,7 +16,7 @@
   }
 </script>
 </head>
-<body onload = "fetchOpportunities()">
+<body onload = "fetchOpportunities();addNaviMenues();">
 
   <div id="content">
 
