Styled the MessageBoardChat

--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -45,15 +45,14 @@ limitations under the License.
         <p>Type some text:</p>
         <textarea name="message"></textarea>
         <br/>
-        <p>Upload an image:</p>
+        <p>Upload an image(jpeg/jpg/png/gif):</p>
         <input type="file" name="image">
         <br/><br/>
-        <button>Submit</button>
+        <button class="button">Submit</button>
     </form>
 
-    <hr/>
 
-    <div id="message-container">Loading...</div>
+    <div id="message-container" class="m1">Loading...</div>
 
 
   </body>
