Implemented search in Message Board Chat

--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -50,7 +50,15 @@ limitations under the License.
         <br/><br/>
         <button class="button">Submit</button>
     </form>
-
+	<div>
+	
+		<form 
+		style = "position:absolute; 
+				right:0;">
+			<input type="text" placeholder="Search" id = "search">
+			<input type="button" value="Search" onclick = "doSearch()">
+		</form> 
+	</div>
 
     <div id="message-container" class="m1">Loading...</div>
 
