Fixed bug on pressing enter when searching

--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -54,9 +54,9 @@ limitations under the License.
 	
 		<form 
 		style = "position:absolute; 
-				right:0;">
+				right:0;" onsubmit = 'return false;'>
 			<input type="text" placeholder="Search" id = "search">
-			<input type="button" value="Search" onclick = "doSearch()">
+			<input type="submit" value="Search" onclick = "doSearch()">
 		</form> 
 	</div>
 
