added maps in side panel

--- a/src/main/webapp/map.html
+++ b/src/main/webapp/map.html
@@ -71,10 +71,12 @@
      </script>
 
     <style>
+        @import url('https://fonts.googleapis.com/css?family=Catamaran:800');
         #map{
         height: 100%;
         }
         html, body{
+        	font-family: 'Catamaran', sans-serif;
             height: 100%;
             margin: 0;
             padding: 0;
