Improved Worked On for Waqar

--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -52,7 +52,7 @@
 <div class="container">
   <img src="\images\waqar.jpg" alt="Avatar" class="image" style="width:200%">
   <div class="middle">
-    <div class="text">Worked on: Opportunities backend logic, Frontend of one opportunity</div>
+    <div class="text">Worked on: Opportunities backend, Database Design, Frontend of opportunity page,translation and calender</div>
   </div>
 </div>
 </div>
