--- a/src/main/webapp/map.html
+++ b/src/main/webapp/map.html
@@ -89,7 +89,7 @@
 
 </head>
 
-<body onload="loadFunc();addNaviMenues();buildUI();getCoordinates();">
+<body onload="getCoordinates();loadFunc();addNaviMenues();">
 <div id="loader"></div>
 
 <div id="menu" class="nav">
