If user is logged in and visits homepage/aboutus, then it is redirected to MessageBoardChat

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,13 +19,14 @@ limitations under the License.
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>CodeU 2019 Starter Project</title>
-    <link rel="stylesheet" href="/css/index-page.css">
-	<link href="https://fonts.googleapis.com/css?family=Arimo&display=swap" rel="stylesheet">
-    <script src="/js/navigation-loader.js"></script>
+      <title>CodeU 2019 Starter Project</title>
+      <link rel="stylesheet" href="/css/index-page.css">
+	  <link href="https://fonts.googleapis.com/css?family=Arimo&display=swap" rel="stylesheet">
+      <script src="/js/navigation-loader.js"></script>
+	  <script src="/js/index,aboutus.js"></script>
 
   </head>
-  <body onload="addNaviMenues();">
+  <body onload="addNaviMenues(); RedirectIfLoggedIn()">
     <nav>
       <ul class = "topnav" id="navigation">
       </ul>
