--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -7,9 +7,10 @@
 		<link rel="stylesheet" href="\css\aboutus.css">
 		<link rel="stylesheet" href="\css\main.css">
 		<script src="/js/navigation-loader.js"></script>
+        <script src="/js/index,aboutus.js"></script>
 
-  </head>
-  <body onload="addNaviMenues();">
+    </head>
+  <body onload="addNaviMenues(); RedirectIfLoggedIn()">
     <nav>
       <ul class = "topnav" id="navigation">
       </ul>
